@@ -5,6 +5,7 @@ import lombok.Setter;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.http.HttpMethod;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -26,13 +27,19 @@ public class SecurityWhitelistProperties {
         if (parsedWhitelist == null) {
             Map<HttpMethod, List<String>> parsed = new HashMap<>();
             for (Map.Entry<String, List<String>> entry : whitelist.entrySet()) {
-                HttpMethod httpMethod = HttpMethod.valueOf(entry.getKey().toUpperCase());
-                List<String> cleanedUrls = entry.getValue().stream()
+                String httpMethodString = entry.getKey().split("\\.")[0].toUpperCase();
+                HttpMethod httpMethod = HttpMethod.valueOf(httpMethodString);
+                List<String> urls = parsed.computeIfAbsent(httpMethod, k -> new ArrayList<>());
+                urls.addAll(entry.getValue());
+            }
+            parsed.forEach((httpMethod, urls) -> {
+                List<String> cleanedUrls = urls.stream()
                         .map(String::trim)
                         .filter(url -> !url.isEmpty())
-                        .toList();
+                        .collect(Collectors.toList());
                 parsed.put(httpMethod, cleanedUrls);
-            }
+            });
+
             this.parsedWhitelist = parsed;
         }
         return this.parsedWhitelist;
